--- a/Ejercicio9/app/src/main/res/navigation/nav_graph.xml
+++ b/Ejercicio9/app/src/main/res/navigation/nav_graph.xml
@@ -3,10 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/pokemonFragment">
+    app:startDestination="@id/pokemonFragmentVerde">
     <fragment
-        android:id="@+id/pokemonFragment"
+        android:id="@+id/pokemonFragmentVerde"
         android:name="com.example.ejercicio9.PokemonFragment"
-        android:label="fragment_pokemon"
-        tools:layout="@layout/fragment_pokemon" />
+        android:label="fragment_pokemon_verde"
+        tools:layout="@layout/fragment_pokemon_verde" />
+    <fragment
+        android:id="@+id/pokemonFragmentAmarillo"
+        android:name="com.example.ejercicio9.PokemonFragmentAmarillo"
+        android:label="fragment_pokemon_amarillo"
+        tools:layout="@layout/fragment_pokemon_amarillo" />
 </navigation>
