Ejercicio 9 no terminado

--- a/Ejercicio9/app/src/main/res/navigation/nav_graph.xml
+++ b/Ejercicio9/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,11 @@
         android:id="@+id/pokemonFragmentVerde"
         android:name="com.example.ejercicio9.PokemonFragment"
         android:label="fragment_pokemon_verde"
-        tools:layout="@layout/fragment_pokemon_verde" />
+        tools:layout="@layout/fragment_pokemon_verde" >
+        <action
+            android:id="@+id/action_pokemonFragmentVerde_to_pokemonFragmentAmarillo"
+            app:destination="@id/pokemonFragmentAmarillo" />
+    </fragment>
     <fragment
         android:id="@+id/pokemonFragmentAmarillo"
         android:name="com.example.ejercicio9.PokemonFragmentAmarillo"
