--- a/Ejercicio9/app/src/main/res/layout/fragment_pokemon_verde.xml
+++ b/Ejercicio9/app/src/main/res/layout/fragment_pokemon_verde.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/calcular"
+        android:id="@+id/introducirDatosEquipoVerdeBoton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
