--- a/Ejercicio9/app/src/main/res/navigation/nav_graph.xml
+++ b/Ejercicio9/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,11 @@
         android:id="@+id/pokemonFragmentVerde"
         android:name="com.example.ejercicio9.PokemonFragmentVerde"
         android:label="fragment_pokemon_verde"
-        tools:layout="@layout/fragment_pokemon_verde" />
+        tools:layout="@layout/fragment_pokemon_verde" >
+        <action
+            android:id="@+id/action_pokemonFragmentVerde_to_batallaFragment"
+            app:destination="@id/batallaFragment" />
+    </fragment>
     <fragment
         android:id="@+id/pokemonFragmentAmarillo"
         android:name="com.example.ejercicio9.PokemonFragmentAmarillo"
@@ -18,4 +22,9 @@
             android:id="@+id/action_pokemonFragmentAmarillo_to_pokemonFragmentVerde"
             app:destination="@id/pokemonFragmentVerde" />
     </fragment>
+    <fragment
+        android:id="@+id/batallaFragment"
+        android:name="com.example.ejercicio9.batallaFragment"
+        android:label="fragment_batalla"
+        tools:layout="@layout/fragment_batalla" />
 </navigation>
