--- a/ProyectoPokedex/app/src/main/res/layout/fragment_name_detail.xml
+++ b/ProyectoPokedex/app/src/main/res/layout/fragment_name_detail.xml
@@ -2,8 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginLeft="25dp"
-    android:layout_marginRight="25dp">
+    android:background="#B1B1B1">
 
     <data>
 
@@ -21,23 +20,46 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <ImageView
+                android:id="@+id/fotoImageView"
+                android:layout_width="411dp"
+                android:layout_height="174dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="#B27F41" />
+
             <TextView
-                android:id="@+id/movimientoText"
+                android:id="@+id/nombreText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#000000"
-                android:backgroundTint="@color/teal_200"
                 android:text="Nombre"
                 android:textAlignment="center"
                 android:textSize="24sp"
                 android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/name"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#000000"
-                android:backgroundTint="@color/teal_200"
                 android:text="@{namePokemon.name}"
+                android:textAlignment="center"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/heightText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Peso"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/height"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{namePokemon.height}"
                 android:textAlignment="center"
                 android:textSize="24sp" />
         </LinearLayout>
