--- a/ProyectoPokedex/app/src/main/res/layout/viewholder_name_list.xml
+++ b/ProyectoPokedex/app/src/main/res/layout/viewholder_name_list.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#B1B1B1">
     <data>
         <variable
             name="name"
@@ -19,11 +20,12 @@
 
             <ImageView
                 android:id="@+id/fotoImageView"
-                android:layout_width="96dp"
-                android:layout_height="96dp"
+                android:layout_width="212dp"
+                android:layout_height="174dp"
                 android:layout_gravity="center_horizontal"
-                android:text="@{name.number}"
-                android:background="#FF0808" />
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="#B27F41" />
 
             <TextView
                 android:id="@+id/name"
@@ -31,7 +33,10 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:text="@{name.name}"
-                android:textAllCaps="true" />
+                android:textAllCaps="true"
+                android:textSize="34sp"
+                android:textStyle="bold" />
+
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
